DocGen Edit Updates

--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/Forms/MethodGroupHeading/MethodHeadingSelect.resx
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/Forms/MethodGroupHeading/MethodHeadingSelect.resx
@@ -117,80 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="NameText.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="NameLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="FormCancelButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="OKButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="SequenceText.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="SequenceLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="ActiveCheckbox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="ParentText.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="ParentLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="HeadingText.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="HeadingLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CustomText.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="CustomLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="GroupButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="ButtonImages.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="HeadingMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
-  </metadata>
-  <data name="ButtonImages.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACu
-        BAAAAk1TRnQBSQFMAgEBAgEAAQQBAQEEAQEBDQEAAQ0BAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAE0
-        AwABDQMAAQEBAAEYBQAB7AEHOQAB8AHpAeEBzwG2AZ4ByAGvAZMBygGyAZcBzwG2AZ4BwAGoAYkBwAGu
-        AY8BwAGqAYoBwAGtAY4BwAGuAY8BxAGsAY4BywG1AZ4BwwGlAYd1AAHAAaABgAP/AuIB0wLsAeID/wHA
-        AcQBpQHAAdwCwAHLAawBwAHYAbsBwAHaAb4BzwHSAb0B8AH7Af8BywG1AZ51AAHAAaABgALTAb0CygGw
-        As0BtALTAb0BwAHBAaIBwAHJAaoBigGoAb8BZwGbAdUBZwGbAdYBhwGnAcgBzwHSAb0BwwGsAY9RAAPw
-        AmUBaQJsAW0D+wP3AmkBbAJpAWwD9gP7AmwBbQJlAWkD8AHAAaABgAL6AfgC3wHPAukB3QL6AfgCyQGt
-        AvoB+AGIAa8B6QGkAZkB4AGuAZwB4AF5AaYB5wL6AfgBzgG1AZxRAAPtAisBLAIzATQD+wP1Ai8BMAIv
-        ATAC9AH1A/sCMwE0AioBKwLsAe0BwAGgAYAC9QHwAt0BywLlAdgC9QHwAsgBrAL1AfABhgGtAeYBmwGX
-        AeABpAGZAeABdwGkAeUC9QHwAc0BtAGbUQAD9wKzAbQDtgP9A/oCtAG2ArQBtgP6A/0DtgKzAbQD9gHA
-        AaABgALYAcUCzQG0AtEBugLYAcUCxAGlAtgBxQGZAbEBxgGGAa0B5gGIAa8B6QGRAawBxwLYAcUBxgGt
-        AZF1AAHAAaABgAP/AuIB0wLsAeID/wLKAa4D/wLYAcUC9QHwAvoB+ALTAb0D/wHPAbYBnnUAAcABoAGA
-        AsoBrgLFAagCxwGqAsoBrgLCAaICygGuAsQBpgLIAawCyQGtAsMBpALKAa4BwgGqAYt1AAHAAaABgAHA
-        AdwCwAHPAbEBwAHTAbYBwAHcAcACygGuA/8C2AHFAvUB8AL6AfgC0wG9A/8BzwG2AZ51AAHPAa0BjAHA
-        AckBrAHAAbwBnQLAAZsBwAHJAaIBxwGzAZYB7AHYAc4B0QG9AaAB5QHRAboB6AHUAb8BzQG2AZYB7AHO
-        AcQBygGbAYF1AAHwAcoBpgHUAbEBjAHMAaMBeQHIAaIBbAHYAbUBgwHAAZEBbwHAAZEBYAHAAZEBVwHA
-        AYMBUQHCAYMBVAHSAZcBZgHAAXEBQAHAAWQBQHUAAfABygGmAdEBrwF5AeoB1gG9Ac8BuQGLAewBxwGh
-        AcABoAF7AcABoAFgAcABoAFgAcABhQFgAcQBhQFlAe0BxQGfAdEBmgFkAcABaAFAdQAB8AHKAaYBwAGg
-        AXkB1gGzAYABzwGXAXYBwAGeAWABwAGAAWABwAGAAWABwAGAAUwBwAGAAUABxAGFAUgB4QGqAYcBwAFg
-        AUABwAFgAUBOAAFCAU0BPgcAAT4DAAEoAwABNAMAAQ0DAAEBAQABAQUAAWgXAAP/AQAB/wH4BgAB/wH4
-        BgAB/wH4BgABgAcAAYAHAAGABwAB/wH4BgAB/wH4BgAB/wH4BgAB/wH4BgAB/wH4BgAB/wH4BgAB/wH4
-        BgAL
-</value>
-  </data>
-  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
   </metadata>
 </root>
