--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/Forms/ClassTab/ClassGroupDetail.resx
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/Forms/ClassTab/ClassGroupDetail.resx
@@ -167,7 +167,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACu
-        BAAAAk1TRnQBSQFMAgEBAgEAAQQBAQEEAQEBDQEAAQ0BAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAE0
+        BAAAAk1TRnQBSQFMAgEBAgEAARQBAQEUAQEBDQEAAQ0BAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAE0
         AwABDQMAAQEBAAEYBQAB7AEHOQAB8AHpAeEBzwG2AZ4ByAGvAZMBygGyAZcBzwG2AZ4BwAGoAYkBwAGu
         AY8BwAGqAYoBwAGtAY4BwAGuAY8BxAGsAY4BywG1AZ4BwwGlAYd1AAHAAaABgAP/AuIB0wLsAeID/wHA
         AcQBpQHAAdwCwAHLAawBwAHYAbsBwAHaAb4BzwHSAb0B8AH7Af8BywG1AZ51AAHAAaABgALTAb0CygGw
@@ -190,6 +190,9 @@
         BgAL
 </value>
   </data>
+  <metadata name="DialogMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>179, 17</value>
+  </metadata>
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
